[package]
name = "okx-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
reqwest = "0.12.7"
time = { version = "0.3", features = [
    "macros",
    "local-offset",
    "formatting",
    "parsing",
] }
anyhow = "1.0.97"
http = "1.3.1"
ring = "0.17.14"
