[package]
name = "okx-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.11", features = ["json", "blocking"] }
time = "0.3.36"
anyhow = "1.0.89"
http = "0.2.9"
ring = "0.17.14"
base64 = "0.22.1"
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.88"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tracing = "0.1.44"
